--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -73,10 +73,10 @@
     </div>
     <div class="col-6 d-flex justify-content-center align-items-center">
         <div class="nezobrazovat-na-mobilu-landing">
-            <div class="card height-100 border-none">
+            <div class="card height-100 border-grey">
                 <div class="card-body">
                     <div class="text-center">
-                        <h3 class="mb-3 mt-2">Jaké jsou hlavní výhody <span class="color-1">InLege</span>?</h3>
+                        <h3 class="mb-3 mt-2">Jaké jsou hlavní výhody <span class="color-1">Edookio</span>?</h3>
                     </div>
                     <div class="row">
                         <div class="col-12 mb-3">
@@ -84,13 +84,13 @@
                                 <div class="row">
                                     <div class="col-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-1.png" class="img-fit" alt="" />
+                                            <img src="/img/icon_ai.png" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
                                         <div class="ml-3">
-                                            <h5 class="reason-title">Unikátní přístup</h5>
-                                            <p class="reason-content mt-2">Zkušenosti absolventů práv přetavené do více než 10 000 interaktivních otázek a odpovědí.</p>
+                                            <h5 class="reason-title">Studuj s pomocí AI</h5>
+                                            <p class="reason-content mt-2">Přeměň své poznámky do interaktivních a propojených opakovacích kartiček a testových otázek.</p>
                                         </div>
                                     </div>
                                     
@@ -102,13 +102,13 @@
                                 <div class="row">
                                     <div class="col-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-2.png" class="img-fit" alt="" />
+                                            <img src="/img/icon_share.png" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
                                         <div class="ml-3">
-                                            <h5 class="reason-title">Připraví tě na vše</h5>
-                                            <p class="reason-content mt-2">Efektivní příprava na zkoušky, nezávisle na fázi tvého studia či profesního růstu.</p>
+                                            <h5 class="reason-title">Sdílej svůj obsah s přáteli</h5>
+                                            <p class="reason-content mt-2">Svůj obsah můžeš neomezeně sdílet s přáteli. Spojte síly a studujte ještě efektivněji!</p>
                                         </div>
                                     </div>
                                     
@@ -120,13 +120,13 @@
                                 <div class="row">
                                     <div class="col-lg-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-4.png" class="img-fit" alt="" />
+                                            <img src="/img/icon_mobileandpc.png" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
                                         <div class="ml-3">
-                                            <h5 class="reason-title">Dostupné pro všechny</h5>
-                                            <p class="reason-content mt-2">Věříme, že kvalitní studijní materiály by měly být dostupné pro každého. Alespoň polovina kartiček je vždy zdarma!</p>
+                                            <h5 class="reason-title">Studuj kdykoliv a kdekoliv</h5>
+                                            <p class="reason-content mt-2">Díky mobilní aplikace můžeš studovat cestou do školy, při čekání na zkoušku nebo třeba doma v posteli.</p>
                                         </div>
                                     </div>
                                     
