--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>InLege Premium</title>
+        <title>Edookio AI Premium</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -48,8 +48,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 offset-md-1 my-5 p-4">
-                <h1 class="jumbotron-heading mb-3">InLege <span class="color-1">Premium</span></h1>
-                <p class="lead">InLege nabízí tisíce kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček a další funkce jen za pár korun měsíčně.</p>        
+                <h1 class="jumbotron-heading mb-3">Edookio AI <span class="color-1">Premium</span></h1>
+                <p class="lead">Využij sílu Edookio AI naplno s neomezenými otázkami a tisícovkou kreditů měsíčně</p>        
             </div>
             </div>
         </div>
@@ -59,12 +59,12 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4"><i class="fas fa-crown golden"></i> Naše balíčky</h1>
-                    <p class="fs-5">Většina opakovacích kartiček je dostupná zdarma s balíčkem Free. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 3 000 prémiových kartiček, neomezených přístup k testovým otázkám a další funkce.</p>
+                    <p class="fs-5 text-muted">Posuň své studium o úroveň výš s balíčkem Premium</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="premium-packages">
+    <section class="premium-packages mb-5">
         <div class="container">
             <div class="row px-lg-5 px-2 justify-content-center">
                 <div class="col-12 col-lg-3 price-table-wrapper p-0">
@@ -106,7 +106,40 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            více než 3 000 kartiček
+                                            neomezený přístup ke kartičkám
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            neomezená tvorba obsahu bez AI
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            neomezené sdílení obsahu
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            100 kreditů na tvorbu AI obsahu
                                         </div>
                                     </div>
                                 </li>
@@ -122,8 +155,6 @@
                                     </div>
                                 </li>
                                 
-                                <li style="opacity: 0">placeholder</li>
-                                <li style="opacity: 0">placeholder</li>
                                 <li style="opacity: 0">placeholder</li>
                             </ul>
                         </div>
@@ -173,17 +204,40 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            vše z balíčku Free
+                                            neomezený přístup ke kartičkám
                                         </div>
                                     </div>
                                 </li>
+
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            dalších 3 000+ kartiček
+                                            neomezená tvorba obsahu bez AI
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            neomezené sdílení obsahu
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            1 000 AI kreditů / měsíc
                                         </div>
                                     </div>
                                 </li>
@@ -194,18 +248,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            testové otázky bez limitu
-                                        </div>
-                                    </div>
-                                </li>
-                                
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            funkce ukládání kartiček
+                                            neomezený přístup k otázkám
                                         </div>
                                     </div>
                                 </li>
@@ -252,13 +295,58 @@
                             </div>
                             <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš?</b></p>
                             <ul class="text-smaller premium-card-list">
+                                
                                 <li>
                                     <div class="d-flex align-items-center">
                                         <div>
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            vše z balíčku Free
+                                            neomezený přístup ke kartičkám
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            neomezená tvorba obsahu bez AI
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            neomezené sdílení obsahu
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            1 000 AI kreditů / měsíc
+                                        </div>
+                                    </div>
+                                </li>
+                                
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            neomezený přístup k otázkám
                                         </div>
                                     </div>
                                 </li>
@@ -272,52 +360,119 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            dalších 3 000+ kartiček
-                                        </div>
-                                    </div>
-                                </li>
-                                
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            testové otázky bez limitu
-                                        </div>
-                                    </div>
-                                </li>
-                                
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            funkce ukládání kartiček
-                                        </div>
-                                    </div>
-                                </li>
                             </ul>
                         </div>
                     </div>
                 </div>
-        <div class="row mt-lg-3">
-            <div class="col-12 col-sm-8 offset-sm-2 mt-4">
-                <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p class=" text-center p-3 pb-1">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
-                    <p class=" text-center text-small pt-3 mb-0"><sup>*</sup> Předplatné je placeno vždy za celé zvolené obdobní najednou.</b></p>
-                    <p class=" text-center text-small pb-5"><sup>**</sup> Ve srovnání s měsíčním předplatným.</b></p>
+        </div>
+        </div>
+    </section>
+
+    <section class="hide-on-mobile">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2 text-center mt-4 mb-0">
+                    <h1 class="">Srovnání balíčků</h1>
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="table-plans hide-on-mobile">
+        <div class="container">
+            <div class="row">
+                <div class="col-10 offset-1">
+                <table class="table table-bordered rounded-table">
+                    <thead class="thead-light">
+                      <tr>
+                        <th scope="col">Funkce</th>
+                        <th scope="col">Free</th>
+                        <th scope="col">Premium (Měsíční)</th>
+                        <th scope="col">Premium (Roční)</th>
+                      </tr>
+                    </thead>
+                    <tbody>                 
+                      <tr>
+                        <th scope="row">Vytváření kartiček bez AI</th>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr>
+                      
+                      <tr>
+                        <th scope="row">Vytváření otázek bez AI</th>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">Vytváření otázek s AI</th>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">Vytváření otázek s AI</th>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">Sdílení předmětů</th>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">Studium kartiček</th>
+                        <td>neomezeně</td>
+                        <td>neomezeně</td>
+                        <td>neomezeně</td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">Studium otázek</th>
+                        <td>50 / měsíc</td>
+                        <td>neomezeně</td>
+                        <td>neomezeně</td>
+                      </tr>
+                  
+                      <!-- AI Credits -->
+                      <tr>
+                        <th scope="row">Kredity na tvorbu AI obsahu</th>
+                        <td>100 / měsíc</td>
+                        <td>1 000 / měsíc</td>
+                        <td>1 000 / měsíc</td>
+                      </tr>  
+                      
+                      <tr>
+                        <th scope="row">Možnost dokoupení kreditů</th>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr> 
+                    </tbody>
+                  </table>   
+                </div>               
+            </div>
         </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row mt-lg-3">
+                <div class="col-12 col-sm-8 offset-sm-2 mt-4">
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <p class=" text-center p-3 pb-1">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
+                        <p class=" text-center text-small pt-3 mb-0"><sup>*</sup> Předplatné je placeno vždy za celé zvolené obdobní najednou.</b></p>
+                        <p class=" text-center text-small pb-5"><sup>**</sup> Ve srovnání s měsíčním předplatným.</b></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
