faq on premium page

--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -76,7 +76,7 @@
             <div class="card height-100 border-grey">
                 <div class="card-body">
                     <div class="text-center">
-                        <h3 class="mb-3 mt-2">Jaké jsou hlavní výhody <span class="color-1">Edookio</span>?</h3>
+                        <h3 class="mb-3 mt-2">Jaké jsou hlavní výhody <span class="color-1">Edookio AI</span>?</h3>
                     </div>
                     <div class="row">
                         <div class="col-12 mb-3">
