--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
-                    <h1 class="mb-4"><i class="fas fa-crown golden"></i> Naše balíčky</h1>
+                    <h1 class="mb-4"><i class="fas fa-crown golden"></i> Balíčky</h1>
                     <p class="fs-5 text-muted">Posuň své studium o úroveň výš s balíčkem Premium</p>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            100 kreditů na tvorbu AI obsahu
+                                            100 AI kreditů / měsíc
                                         </div>
                                     </div>
                                 </li>
@@ -457,6 +457,76 @@
                       </tr> 
                     </tbody>
                   </table>   
+                </div>               
+            </div>
+        </div>
+    </section>
+
+    <section class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2 text-center mt-4 mb-0">
+                    <h1 class="">Časté otázky</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="table-plans">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Co jsou AI kredity?
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <p><strong>AI kredity</strong> jsou naše <strong>virtuální měna</strong>, kterou můžeš využít k tvorbě obsahu s využitím umělé inteligence. <strong>Jeden kredit</strong> odpovídá jedné kartičce a otázce (vždy jsou vytvářeny společně, cena je tedy 0,5 kreditu "za kus"). Každý měsíc dostaneš určitý počet kreditů, které můžeš využít k tvorbě nových otázek. Pokud by ti kredity nestačily, můžeš si je dokoupit. Ze zkušenosti víme, že <strong>1 000 kreditů</strong> je <strong>optimální měsíční množství</strong> pro pravidelné vytváření obsahu.</p>
+                              <p>Kredity jsou nutné pro udržitelnost Edookia, protože za data zpracovaná umělou inteligencí platíme společnosti OpenAI, používáme totiž její nejnovější model <strong>gpt-4o</strong>.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingX">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseX" aria-expanded="false" aria-controls="collapseX">
+                                Je vytváření obsahu bez AI (ručně) nějak omezeno?
+                              </button>
+                            </h2>
+                            <div id="collapseX" class="accordion-collapse collapse" aria-labelledby="headingX" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <p class="mb-0"><strong>Není.</strong> Bez AI můžeš vytvářet neomezené množství obsahu, kredity se nepočítají.</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              Můžu předplatné kdykoliv ukončit?
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <strong>Ano.</strong> V případě ukončení předplatného zůstane Premium <strong>aktivní do konce obdobní</strong> (měsíc nebo rok). Po skončení období se automaticky přepneš na bezplatnou verzi aplikace. <strong>Přístup</strong> k vytvořenému obsahu <strong>zůstane zachován</strong> v mezích balíčku Free (neomezeně ke kartičkám, 50 testových otázek / měsíc).
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              Co se stane s mými kartičkami a otázkami po skončení předplatného?
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              Po skončení předplatného zůstanou <strong>veškeré kartičky a otázky</strong> vytvořené v rámci předplatného zachovány. <strong>Přístup</strong> ke kartičkám bude <strong>neomezený</strong>, k testovým otázkám budeš mít přístup omezen podle balíčku Free na <strong> 50 otázek / měsíc</strong>.
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                 </div>               
             </div>
         </div>
