--- a/views/payments/success.ejs
+++ b/views/payments/success.ejs
@@ -1,16 +1,15 @@
-<% layout ('layouts/boilerplate.ejs')  %> 
+<% layout ('layouts/boilerplate.ejs') %>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 col-12 offset-md-3">
-            <div class="card text-center p-4">
-                <h3>Premium je aktivní</h3>
-                <p class="my-4"><i class="fas fa-check-circle green-check"></i></p>
-                <h5>Děkujeme!</h5>
-                <p class="mt-3">Nyní můžeš využívat výhod <span class="color-1" style="font-weight: bold;">Edookio</span> naplno!</p>
-                <div class="d-flex justify-content-center mt-3">
-                    <a href="/" class="btn btn-lg btn-danger w-50">Jdeme na to!</a>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-md-6 col-12 offset-md-3">
+      <div class="card text-center p-4">
+        <h3>Platba byla úspěšná</h3>
+        <p class="my-4"><i class="fas fa-check-circle green-check"></i></p>
+        <h5>Děkujeme!</h5>
+        <div class="d-flex justify-content-center mt-3">
+          <a href="/" class="btn btn-lg btn-danger w-50">Pustit se do studia</a>
         </div>
+      </div>
     </div>
+  </div>
 </div>
